...
    <string name="textview">TextView</string>
    <string name="achievements">Achievements</string>
    <string name="achievements_list">Achievements List</string>
    <string name="buttonsave">buttonSave</string>


    <string name="plateUpgradeButton">Plate</string>
    <string name="plateUpgradeDescription">Increases the number of meals made per click!</string>

    <string name="workerUpgradeButton">Worker</string>
    <string name="workerUpgradeDescription">Additional workers to help create meals!</string>

    <string name="foodTruckUpgradeButton">Food Truck</string>
    <string name="foodTruckUpgradeDesc">Food trucks can deliver meals straight to your door!</string>

    <string name="restaurantUpgradeButton">Restaurant</string>
...
